[project]
name = "flow-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.6",
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optax>=0.2.5",
    "ott-jax>=0.5.0",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "flow-matching",
]

[tool.uv.sources]
flow-matching = { workspace = true }
